meegotouchhome (0.23.1~1) unstable; urgency=low

  * [UNRELEASED]

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Thu, 03 Feb 2011 12:45:47 +0200

meegotouchhome (0.23.0-1) unstable; urgency=low

  * Implemented: SWP#DUI-4699 Home Launcher Shortcuts
  * Fixes: NB#217065 - Unable to close applications from switcher if your finger moves while holding it on the screen

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Fri, 21 Jan 2011 17:44:56 +0200

meegotouchhome (0.22.13-1) unstable; urgency=low

  * Fixes: NB#217961 - Some applications are not shown in the switcher after minimizing if they've been closed once

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Fri, 21 Jan 2011 17:44:11 +0200

meegotouchhome (0.22.12-1) unstable; urgency=low

  * Fixes: NB#210728

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Mon, 10 Jan 2011 12:40:00 +0200

meegotouchhome (0.22.11-1) unstable; urgency=low

  * Fixes: NB#208911 - Edit mode of Recents (Switcher) view should exit when status menu or any dialog comes on top.

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Thu, 06 Jan 2011 15:44:05 +0200

meegotouchhome (0.22.10-1) unstable; urgency=low

  * Fixes: Fixed _MEEGOTOUCH_VISIBLE_IN_SWITCHER to be set to 0 when window gets removed from switcher but is not destroyed.

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Mon, 20 Dec 2010 10:58:03 +0200

meegotouchhome (0.22.9-1) unstable; urgency=low

  * Fixes: NB#204272 - In arabic I don't see any running apps in app page

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Tue, 30 Nov 2010 11:58:24 +0200

meegotouchhome (0.22.8-1) unstable; urgency=low

  * Fixes: NB#204512 - Change pinch gesture handling to use totalScaleFactor instead of scaleFactor
  * Fixes: NB#206700 - minimizing window, meegotouchhome crashes
  * Fixes: NB#202350 - Application without _NET_WM_STATE_SKIP_TASKBAR is not visible in the switcher

 -- Aki Koskinen <aki.koskinen@nokia.com>  Thu, 25 Nov 2010 16:54:00 +0200

meegotouchhome (0.22.7-1) unstable; urgency=low
