@@ -1,6 +1,8 @@
 include(../common_top.pri)
 TARGET = ut_mainwindow
 
+STYLE_HEADERS += mainwindowstyle.h
+
 # unit test and unit
 SOURCES += \
     ut_mainwindow.cpp \
@@ -10,7 +12,8 @@ SOURCES += \
 # unit test and unit
 HEADERS += \
     ut_mainwindow.h \
-    $$SRCDIR/mainwindow.h
+    $$SRCDIR/mainwindow.h \
+    $$SRCDIR/mainwindowstyle.h
 
 SOURCES +=
 include(../common_bot.pri)
