@@ -1,3 +1,7 @@
+MainWindowStyle {
+    locked-orientation:;
+}
+
 DesktopStyle {
     margin-left: 0;
     margin-right: 0;
